Bug 118750 - FIREBIRD: MIGRATION: Migration assistant does not run after user answers yes to prompt to begin
Summary: FIREBIRD: MIGRATION: Migration assistant does not run after user answers yes ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: high critical
Assignee: Julien Nabet
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 119669 (view as bug list)
Depends on:
Blocks: Database-Firebird-Migration
  Show dependency treegraph
 
Reported: 2018-07-13 17:44 UTC by Drew Jensen
Modified: 2018-09-04 01:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-07-13 17:44:19 UTC
Description:
The migration assistant no longer runs when the user starts it.

Checked using Ubuntu 18.04 (64bit) with build:
6.2Alpha0

Steps to Reproduce:
1. Open any ODB file with an embedded HSQLdb database
2. Click on the Tables icon
3. When prompted regarding the migration assistant answer yes.

Actual Results:
Message box closes. Migration assistant does not start

Expected Results:
Migration assistant begins


Reproducible: Always


User Profile Reset: No



Additional Info:
bisected in daily master repo, the results follow: a6ac71fa6d867c9497a6a3e077433f549c94897d is the first bad commit
commit a6ac71fa6d867c9497a6a3e077433f549c94897d
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Sun Jul 1 07:08:55 2018 +0200

    2018-07-01: source-hash-b0e291a7efcd3af2a72d0b622b1f1b84723f011f
Comment 1 MM 2018-07-13 21:58:59 UTC
Confirmed on ubuntu 16.04 x64 with Version: 6.2.0.0.alpha0+
Build ID: 757d9e43315755869af30e79c0457fd529cb050a
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-06-26_02:55:47
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 2 Xisco Faulí 2018-07-14 11:59:04 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b68805a896f9bb60d70edd1918bd7acacd56de73

author	Tamas Bunth <tamas.bunth@collabora.co.uk>	2018-06-17 18:53:50 +0200
committer	Tamás Bunth <btomi96@gmail.com>	2018-06-18 10:36:45 +0200
commit b68805a896f9bb60d70edd1918bd7acacd56de73 (patch)
tree 6b5a2af21db7c67f023fba57232ebd3b9493dbb3
parent 276a0f01f626193ac572a2ab8e7d5f2610aa372d (diff)
Back up content.xml when migrating database

Bisected with: bibisect-linux64-6.2

Adding Cc: to Tamas Bunth
Comment 3 Drew Jensen 2018-07-20 23:20:25 UTC
Checked this with the 6.2Alpha build made on 07-20 and most of the odb files I opened ran the migration assistant.

However there this particular one
https://bugs.documentfoundation.org/attachment.cgi?id=143497

still will not. I can open it in 6.1 RC today and it will execute the migration assistant, but in 6.2 it still shows the message box and when you answer yes it does nothing.
Comment 4 Drew Jensen 2018-07-20 23:45:37 UTC
One more (last example)
https://bugs.documentfoundation.org/attachment.cgi?id=114730

again this file will execute the migration assistant under 6.1 RC (has an error but moved enough to test the issue with FB btw) but under 6.2 today after answering yes to the prompt it fails to execute.
Comment 5 Drew Jensen 2018-07-20 23:45:37 UTC Comment hidden (obsolete)
Comment 6 Xisco Faulí 2018-08-29 09:21:30 UTC
Also reproduced with https://bugs.documentfoundation.org/attachment.cgi?id=144513.

This is a blocker to enable the migration in 6.2 by default...
Comment 7 Julien Nabet 2018-09-02 08:07:16 UTC
I gave it a try with https://gerrit.libreoffice.org/#/c/59900/

I think regression is rather due to 9ceeb4619ba762c47589023d99c43c774caab441
Comment 8 Commit Notification 2018-09-02 11:04:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=307e84ac706345510a4d347fbaaf3d53f8249dea

tdf#118750: fix migration assistant

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2018-09-02 11:12:29 UTC
Please don't hesitate to reopen this tracker if it still fails.
Comment 10 Xisco Faulí 2018-09-03 18:04:39 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 4b5fcd417587cfb9e6d8b61ecb037ab165eeb5b9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Julien Nabet, Thanks for fixing this!!

OTOH, I found a bug that might be related, but I'll report it in a different issue...
Comment 11 Xisco Faulí 2018-09-03 19:31:11 UTC
> OTOH, I found a bug that might be related, but I'll report it in a different
> issue...

I found bug 117352, which is older than this one, so no related...
Comment 12 Terrence Enger 2018-09-04 01:24:04 UTC
*** Bug 119669 has been marked as a duplicate of this bug. ***