tdf#118750: fix migration assistant

by catching throw if backup content file doesn't exist

Regression from 9ceeb4619ba762c47589023d99c43c774caab441

Change-Id: I68bb27763573217a9dff0e263cb8be88e15255ad
Reviewed-on: https://gerrit.libreoffice.org/59900
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>